# QCustomPlot-library

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
lib/: CMakeLists.txt  config.h  config.h.in  qcustomplot.h
